# useful-optimizer

./: .gitignore  .pre-commit-config.yaml  BENCHMARK_PIPELINE_README.md  CLAUDE.md  CLEANUP_STRATEGY.md  DOCSTRING_UPDATE_STATUS.md  FINAL_SUMMARY.md  HISTORY_TRACKING_STATUS.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRECOMMIT_FIX_SUMMARY.md  README.md  VISUALIZATION.md  architecture.md  dependencies-report.md  examples_visualization.py  mkdocs.yml  plan-validation.md  plan.md  pyproject.toml  rollback-commands.md  runbook.md  security-review.md  tasks.json  tasks.md
.github/: CONSTITUTION.md  copilot-instructions.md
.github/agents/: copilot-instructions.md
.github/analysis/: benchmarks-gap-report.json  benchmarks-gap-report.md
.github/checklists/: benchmarks-spec.md
.github/prompts/: cli-todos.prompt.md  docs-completion.prompt.md  optimizer-docs-template.md  optimizer-docs-template.prompt.md  spec-kit.prompt.md
.github/workflows/: batch-docstring-ci.yml  benchmark-pipeline.yml  benchmark-visualizations.yaml  benchmark.yml  docs-validation.yml  docs.yaml  docs.yml  python-publish.yaml  tests.yaml
.rrt/: artifacts.lock.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md
architecture/: diagrams.mmd
benchmarks/: README.md  TIER_SYSTEM.md  __init__.py  aggregate_results.py  generate_plots.py  io.py  models.py  run_benchmark_suite.py
ci/: archiving.md
docs/: DOCUMENTATION_GENERATOR.md  ISSUE_RESOLUTION.md  MIGRATION.md  PR_SUMMARY.md  README.md  SCHEMA_UPDATE_WORKFLOW.md  api-data-test.md  benchmark-charts-demo.md  benchmark-data-demo.md  benchmark-demo.md  index.md  package-lock.json  package.json  tags.md  test-charts.md  test-docs-migration.sh  validate-docs-migration.js  zensical.yml
docs/.vitepress/: algorithmsSidebar.ts  config.ts
docs/algorithms/: classical.md  constrained.md  evolutionary.md  gradient-based.md  index.md  metaheuristic.md  multi-objective.md  physics-inspired.md  probabilistic.md  social-inspired.md  swarm-intelligence.md
docs/api/: abstract-optimizer.md  base.md  benchmark-functions.md  classical.md  constrained.md  evolutionary.json  evolutionary.md  gradient-based.md  index.md  metaheuristic.md  multi-objective.md  physics-inspired.md  probabilistic.json  probabilistic.md  social-inspired.md  social_inspired.json  swarm-intelligence.md
docs/api-test/: README.md  USAGE_GUIDE.md  ant-colony-demo.md  index.md
docs/benchmarks/: comparison.md  functions.md  history.md  index.md  methodology.md  results.md  visualization.md
docs/contributing/: guidelines.md
docs/getting-started/: basic-concepts.md  index.md  installation.md  quickstart.md
docs/guide/: advanced.md  index.md  installation.md  quickstart.md
docs/overrides/: main.html
docs/public/: favicon.svg.bak
docs/schemas/: benchmark-data-schema.json  default-mapping.json  docstring-schema.json  vitepress-mapping-schema.json
docs/stylesheets/: dracula-scientific.css
opt/: CONSTANTS.md  __init__.py  abstract_optimizer.py  adamax.py  adamw.py  adaptive_moment_estimation.py  amsgrad.py  augmented_lagrangian_method.py  bfgs.py  conjugate_gradient.py  constants.py  demo.py  docstring_models.py  lbfgs.py  nadam.py  nelder_mead.py  nesterov_accelerated_gradient.py  powell.py  rmsprop.py  sgd_momentum.py  stochastic_gradient_descent.py  trust_region.py
opt/abstract/: __init__.py  history.py  multi_objective.py  single_objective.py
opt/benchmark/: functions.py  optima.py  utils.py
opt/classical/: __init__.py  bfgs.py  conjugate_gradient.py  hill_climbing.py  lbfgs.py  nelder_mead.py  powell.py  simulated_annealing.py  tabu_search.py  trust_region.py
opt/constrained/: __init__.py  augmented_lagrangian_method.py  barrier_method.py  penalty_method.py  sequential_quadratic_programming.py  successive_linear_programming.py
opt/evolutionary/: __init__.py  cma_es.py  cultural_algorithm.py  differential_evolution.py  estimation_of_distribution_algorithm.py  genetic_algorithm.py  imperialist_competitive_algorithm.py
opt/gradient_based/: __init__.py  adadelta.py  adagrad.py  adamax.py  adamw.py  adaptive_moment_estimation.py  amsgrad.py  nadam.py  nesterov_accelerated_gradient.py  rmsprop.py  sgd_momentum.py  stochastic_gradient_descent.py
opt/metaheuristic/: __init__.py  arithmetic_optimization.py  brain_storm_optimization.py  colliding_bodies_optimization.py  cross_entropy_method.py  eagle_strategy.py  forensic_based.py  harmony_search.py  particle_filter.py  shuffled_frog_leaping_algorithm.py  sine_cosine_algorithm.py  stochastic_diffusion_search.py  stochastic_fractal_search.py  variable_depth_search.py  variable_neighbourhood_search.py  very_large_scale_neighborhood_search.py
opt/multi_objective/: __init__.py  abstract_multi_objective.py  moead.py  nsga_ii.py  spea2.py
opt/physics_inspired/: __init__.py  atom_search.py  equilibrium_optimizer.py  gravitational_search.py  rime_optimizer.py
opt/probabilistic/: __init__.py  adaptive_metropolis.py  bayesian_optimizer.py  linear_discriminant_analysis.py  parzen_tree_stimator.py  sequential_monte_carlo.py
opt/test/: __init__.py  (+10 more)
scripts/: README.md  __init__.py  add_history_tracking_to_optimizer.py  audit_max_iter.py  batch_update_docstrings.py  check_forbidden_mcp_calls.py  check_google_docstring_inline_descriptions.py  check_trivial_doctests.py  docstring_models.py  docstring_parser.py  fix_coco_examples.py  fix_docstring_indentation.py  fix_multiline_returns.py  fix_numpy_doctest_bool.py  generate_docs.py  replace_doctests_with_benchmark.py  replace_trivial_doctests.py  test-benchmark-data.sh  unified_validator.py  validate_benchmark_json.py  validate_optimizer_docs.py
tests/: __init__.py  test_audit_max_iter.py  test_benchmark_export.py  test_benchmarks_full.py  test_benchmarks_models.py  test_benchmarks_quick.py  test_checklists_benchmarks_spec.py  test_coco_examples.py  test_constitution.py  test_doctest_replacements.py  test_history_artifacts.py  test_history_export.py  test_mcp_logging.py  test_spec_replace_doctests.py  test_tasks_consistency.py  test_tasks_format.py
(+316 files in other folders)
